<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            android:layout_height="@dimen/profile_header_height"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/confirm_btn">

            <ImageView
            android:id="@+id/bg_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg"
            app:layout_collapseMode="parallax" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/profile_img"
                    android:layout_width="@dimen/profile_image_size"
                    android:layout_height="@dimen/profile_image_size"
                    android:src="@drawable/profile" />

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_12"
                    android:text="@string/placeholder_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_18"
                    style="@style/MontserratMedium" />

                <TextView
                    android:id="@+id/profile_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_city"
                    android:textColor="@color/white_80"
                    android:textSize="@dimen/text_size_14"
                    style="@style/MontserratRegular" />
            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <ImageView
                    android:id="@+id/close_button"
                    android:layout_width="@dimen/icon_size_24"
                    android:layout_height="@dimen/icon_size_24"
                    android:src="@drawable/outline_close_24"
                    android:visibility="gone"
                    android:layout_margin="@dimen/margin_16"
                    app:tint="@color/white" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_32">

            <LinearLayout
                android:id="@+id/cards_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:paddingStart="@dimen/padding_16"
                android:paddingEnd="@dimen/padding_16"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/stats_card_height"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin_4"
                    app:cardCornerRadius="@dimen/radius_6"
                    app:cardBackgroundColor="@color/bg_4">
                    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="@dimen/icon_size_22"
                            android:layout_height="@dimen/icon_size_24"
                            android:src="@drawable/alert"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alerts"
                            android:layout_marginTop="@dimen/margin_8"
                            style="@style/MontserratRegular"
                            android:textSize="@dimen/text_size_12"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="6"
                            android:layout_marginTop="@dimen/margin_4"
                            style="@style/MontserratSemiBold"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/stats_card_height"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin_4"
                    app:cardCornerRadius="@dimen/radius_6"
                    app:cardBackgroundColor="@color/bg_4">
                    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
                        <ImageView android:layout_width="@dimen/icon_size_22" android:layout_height="@dimen/icon_size_24" android:src="@drawable/places"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/places" android:layout_marginTop="@dimen/margin_8" style="@style/MontserratRegular" android:textSize="@dimen/text_size_12"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="40" android:layout_marginTop="@dimen/margin_4" style="@style/MontserratSemiBold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/stats_card_height"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin_4"
                    app:cardCornerRadius="@dimen/radius_6"
                    app:cardBackgroundColor="@color/bg_4">
                    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
                        <ImageView android:layout_width="@dimen/icon_size_22" android:layout_height="@dimen/icon_size_24" android:src="@drawable/shots"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/shots" android:layout_marginTop="@dimen/margin_8" style="@style/MontserratRegular" android:textSize="@dimen/text_size_12"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="60" android:layout_marginTop="@dimen/margin_4" style="@style/MontserratSemiBold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/stats_card_height"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin_4"
                    app:cardCornerRadius="@dimen/radius_6"
                    app:cardBackgroundColor="@color/bg_4">
                    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
                        <ImageView android:layout_width="@dimen/icon_size_22" android:layout_height="@dimen/icon_size_24" android:src="@drawable/friends"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/friends" android:layout_marginTop="@dimen/margin_8" style="@style/MontserratRegular" android:textSize="@dimen/text_size_12"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="60" android:layout_marginTop="@dimen/margin_4" style="@style/MontserratSemiBold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:id="@+id/select_country_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_country"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_32"
                style="@style/MontserratMedium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cards_container"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/selected_country_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginHorizontal="@dimen/margin_18"
                android:padding="@dimen/padding_16"
                app:layout_constraintTop_toBottomOf="@id/select_country_txt">

                <ImageView
                    android:id="@+id/selected_country_image"
                    android:layout_width="@dimen/icon_size_32"
                    android:layout_height="@dimen/icon_size_32"
                    android:src="@color/bg_3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/selected_country_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:text="@string/placeholder_country"
                    android:textColor="@color/black_2"
                    style="@style/MontserratMedium"
                    android:maxLines="1"
                    android:maxEms="10"
                    android:ellipsize="end"
                    app:layout_constraintRight_toLeftOf="@id/edit_btn"
                    app:layout_constraintStart_toEndOf="@id/selected_country_image"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/edit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:textColor="@color/black_2"
                    style="@style/MontserratMedium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_24"
                app:layout_constraintTop_toBottomOf="@id/select_country_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_hint"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:padding="@dimen/padding_16"
                    style="@style/MontserratRegular"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>